commit -m "add mail and statistics to groups"

--- a/src/main/resources/templates/groups/show.html
+++ b/src/main/resources/templates/groups/show.html
@@ -103,6 +103,62 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Question 1 show the highest absences subject and the lowest  -->
+
+                    <div class="row">
+                        <!-- Subject with high absences -->
+                        <div class="col-md-6">
+                            <div class="card">
+                                <div class="card-header card-header-text card-header-primary">
+                                    <div class="card-text">
+                                        <h4 class="card-title">SUBJECT WITH HIGHER ABSENCE </h4>
+                                    </div>
+                                </div>
+                                <div class="card-body table-responsive">
+                                    <table class="table table-hover">
+                                        <thead class="text-primary">
+                                        <th>Name</th>
+                                        <th>Total Absences</th>
+                                        </thead>
+                                        <tbody>
+                                        <tr th:classappend="${'bg-danger text-light'}" >
+                                            <td th:text="${subjectHavingMaxAbsence.name}"></td>
+                                            <td th:text="${absenceService.hoursCountByGroupAndSubject(group.id, subjectHavingMaxAbsence.id)+'h'}">
+                                            </td>
+                                        </tr>
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Subject with low absences  -->
+                        <div class="col-md-6">
+                            <div class="card">
+                                <div class="card-header card-header-text card-header-primary">
+                                    <div class="card-text">
+                                        <h4 class="card-title">SUBJECT WITH LOWER ABSENCE</h4>
+                                    </div>
+                                </div>
+                                <div class="card-body table-responsive">
+                                    <table class="table table-hover">
+                                        <thead class="text-primary">
+                                        <th>Name</th>
+                                        <th>Total Absences</th>
+                                        </thead>
+                                        <tbody>
+                                        <tr th:classappend="${'bg-success text-light'}" >
+                                            <td th:text="${subjectHavingMinAbsence.name}"></td>
+                                            <td th:text="${absenceService.hoursCountByGroupAndSubject(group.id, subjectHavingMinAbsence.id)+'h'}"></td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
